added game logic, reset, and score.

--- a/css/style.css
+++ b/css/style.css
@@ -104,3 +104,21 @@ font-size: 0;
 	color: #F15B31;
 	font-weight: 700;
 }
+
+button {
+  -webkit-border-radius: 6;
+  -moz-border-radius: 6;
+  border-radius: 6px;
+  font-family: Arial;
+  color: #000;
+  font-size: 24px;
+  padding: 10px 20px 10px 20px;
+  border: solid #000000 2px;
+  text-decoration: none;
+  -webkit-transition: -webkit-transform .5s ease-in-out;
+  display: none;
+}
+
+button:hover {
+	-webkit-transform:scale(1.5,1.5);
+}
